add methods for integration service
