# api/docs/swagger.json
@@ -1157,6 +1157,52 @@
                         }
                     }
                 }
+            },
+            "delete": {
+                "description": "Delete Integration",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Integration"
+                ],
+                "summary": "Delete Integration",
+                "operationId": "delete_Integration",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Integration-id",
+                        "name": "integration-id",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "204": {
+                        "description": ""
+                    },
+                    "500": {
+                        "description": "Server Error",
+                        "schema": {
+                            "allOf": [
+                                {
+                                    "$ref": "#/definitions/http.Response"
+                                },
+                                {
+                                    "type": "object",
+                                    "properties": {
+                                        "data": {
+                                            "type": "string"
+                                        }
+                                    }
+                                }
+                            ]
+                        }
+                    }
+                }
             }
         },
         "/integration/{integration-id}/session": {
@@ -1334,7 +1380,7 @@
                                     "type": "object",
                                     "properties": {
                                         "data": {
-                                            "$ref": "#/definitions/auth_service.Integration"
+                                            "$ref": "#/definitions/auth_service.Token"
                                         }
                                     }
                                 }
@@ -1362,7 +1408,7 @@
                 }
             },
             "delete": {
-                "description": "Get Integration",
+                "description": "Delete Session From Integration",
                 "consumes": [
                     "application/json"
                 ],
@@ -1372,13 +1418,20 @@
                 "tags": [
                     "Integration"
                 ],
-                "summary": "Delete Integration",
-                "operationId": "delete_Integration",
+                "summary": "Delete Session From Integration",
+                "operationId": "delete_session_from_integration",
                 "parameters": [
                     {
                         "type": "string",
                         "description": "Integration-id",
                         "name": "integration-id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "session-id",
+                        "name": "session-id",
                         "in": "path",
                         "required": true
                     }
